Nawal fadel cabtalize coool

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="style sheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>coool agenerator</h1>
+  <h1>COOOL agenerator</h1>
   <imput class="color1" type="color"/>
   <imput class="color2" type="color"/>
   <h2> Currentcss Background</h2>
