hassan changed Nawal beatuful color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>COOOL agenerator</h1>
   <imput class="color1" type="color"/>
   <imput class="color2" type="color"/>
-  <h2> Currentcss Background</h2>
+  <h2> Ths id the Background</h2>
   <h3></h3>
   <script type="text/javascript" scr="script.js"></script>
 </body>
